@@ -66,13 +66,14 @@ Triangular TriangularFactory::buildAsTriangular(const Sample & sample) const
   if (sample.getDimension() != 1) throw InvalidArgumentException(HERE) << "Error: can build a Triangular distribution only from a sample of dimension 1, here dimension=" << sample.getDimension();
 
   const Scalar xMin = sample.getMin()[0];
-  const Scalar a = xMin - std::abs(xMin) / (size + 2);
   const Scalar xMax = sample.getMax()[0];
-  const Scalar b = xMax + std::abs(xMax) / (size + 2);
+  Scalar delta = xMax - xMin;
+  const Scalar a = xMin - delta / (size + 2);
+  const Scalar b = xMax + delta / (size + 2);
   if (!SpecFunc::IsNormal(a) || !SpecFunc::IsNormal(b)) throw InvalidArgumentException(HERE) << "Error: cannot build a Triangular distribution if data contains NaN or Inf";
   if (xMin == xMax)
   {
-    const Scalar delta = std::max(std::abs(xMin), 10.0) * SpecFunc::ScalarEpsilon;
+    delta = std::max(std::abs(xMin), 10.0) * SpecFunc::ScalarEpsilon;
     Triangular result(xMin - delta, xMin, xMax + delta);
     result.setDescription(sample.getDescription());
     return result;
