@@ -1,9 +1,9 @@
 distribution= class=Triangular name=Triangular dimension=1 a=1 m=2.5 b=4
-Estimated distribution= class=Triangular name=Triangular dimension=1 a=1.02699 m=2.51471 b=3.97879
+Estimated distribution= class=Triangular name=Triangular dimension=1 a=1.0268 m=2.51501 b=3.97868
 Default distribution= Triangular(a = -1, m = 0, b = 1)
 Distribution from parameters= Triangular(a = 1, m = 2.5, b = 4)
 Triangular          = Triangular(a = 1, m = 2.5, b = 4)
-Estimated triangular= Triangular(a = 1.02699, m = 2.51471, b = 3.97879)
+Estimated triangular= Triangular(a = 1.0268, m = 2.51501, b = 3.97868)
 Default triangular= Triangular(a = -1, m = 0, b = 1)
 Triangular from parameters= Triangular(a = 1, m = 2.5, b = 4)
 Estimated distribution= class=Triangular name=Triangular dimension=1 a=-2.22045e-15 m=0 b=2.22045e-15
