@@ -23,6 +23,7 @@
 === Miscellaneous ===
 
 === Bug fixes ===
+ * #890 (Cannot build triangular distribution)
 
 
 == 1.9 release (2017-04-18) == #release-1.9
